Finished work on HTML page

--- a/index.html
+++ b/index.html
@@ -1,8 +1,78 @@
 <!DOCTYPE html>
 <html>
    <head>
+      <title>Andrew Donelson - My Story and Interests</title>
    </head>
-   <body>
-      <!-- Write your HTML in this file! -->
-   </body>
+<body> 
+   <header>
+      <h1>My Story and Interests</h1>
+   </header>
+   <main>
+      <article>
+         <section>
+            <u><h2>Early Life</h2></u>
+            <p>I was born January 11, 1991 in Alton, Illinois. My family spent the first 9 years of my life in East Alton, Illinois before moving to Waterloo, Illinois in October of 2000.
+               Most of my 'childhood' friends are from Waterloo, but I still have grandparents and family that live in Alton that I visit frequently. 
+               Waterloo is a great place to raise a family and be a kid. Most of my childhood consisted of playing with kids around my neighborhood and playing sports such as hockey, soccer, and baseball.
+               Going through high school in Waterloo, I was on the school soccer team and hockey team. Some of my closest friends to this day are ones I met in middle school and high school in Waterloo.
+            </p>
+            <img src="images/waterloo_sign.jpg" height = "500">
+         </section>
+         <section>
+            <u><h2>College Life in Champaign, IL</h2></u>
+            <p>I was accepted to the University of Illinois at Urbana-Champaign out of high school and majored in Architecture for the first two years of my undergraduate studies. Eventually, it became
+               clear to me that architecture was not my passion. Not sure what major to transfer to, a friend got me a job at the Illinois Natural Survey's Medical Entomology lab. The focus of this lab
+               was to study mosquitoes and mosquito-borne illnesses. I enjoyed working at this lab and became more interested in biology and environmental sciences. This led me to transferring
+               into the Natural Resources and Environmental Sciences major to which I graduated college with.
+            </p>
+            <img src="images/uofi_grad.jpg" height = "600">
+         </section>
+         <section>
+            <u><h2>Life After College</h2></u>
+            <p>My first professional job out of college was in Franklin Park, Illinois, a suburb of Chicago. I moved from Champaign to Arlington Heights, Illinois and worked at a quality assurance laboratory
+               for about 6 months there. My time in the Chicagoland area was eventful and there were a lot of attractions and things to do around the area, but I missed seeing my family and closest friends.
+               I was eventually given the opportunity to transfer to another laboratory near St. Louis so I jumped at the chance to move back home. I moved back in with my parents in Waterloo for about a year
+               before moving to my own apartment closer to my job in St. Charles, Missouri.
+            </p>
+            <img src="images/chicago.jpg" height = "500">
+         </section>
+         <section>
+            <u><h2>Current Life</h2></u>
+            <p>Currently, I live in St. Louis and work at Bayer Crop Sciences in Chesterfield, Missouri. I work on the Entomology Pipeline Testing team focused on testing new protein compositions to control crop
+               insect pests. Our research is very important to Bayer's business since we are testing prospective corn, soy, and cotton products for their effectiveness in controlling modern crop pests without
+               harming non-target species. I've worked in this lab for 5 years now and really enjoy the people I work with and the research I do at the lab. In order to broaden my knowledge in the scientific research
+               field, I decided learning computer programming would be a nice skill to have. That's what brought me to Launchcode!
+            </p>
+         </section>
+      </article>
+      <article>
+         <section>
+            <u><h2>Hobbies and Interests</h2></u>
+            <h3>Sports:</h3>
+            <h4><b>&lt;&nbsp;Hockey&nbsp;&gt;</b></h4>
+            <p>My parents taught me how to ice skate and I started playing ice hockey at 5 years old. I'm greatful to my parents for getting me started playing and even more greatful for the time they took out of their day
+               to take me to practices and games. During high school, I played on my high school team and a college prepatory club team. I play defense because it's physically demanding and it's fun to check people.
+               Hockey is my favorite sport and I still play currently.
+            </p>
+            <img src="images/hockey.jpg">
+            <h4><b>&lt;&nbsp;Soccer&nbsp;&gt;</b></h4>
+            <p>Another sport I became fascinated with at a young age was soccer. I started playing soccer around the same time as I started playing hockey. I also played on some club teams through high school as well as my
+               high school team. I play goalie primarily because I enjoy the challenge of being the last line of defense for the team. I don't play as much as I use to but I still enjoy watching and playing soccer.
+            </p>
+            <img src="images/soccer.jpg">
+            <h4><b>&lt;&nbsp;Disc Golf&nbsp;&gt;</b></h4>
+            <p>Disc golf is a newer sport that I became interested in during college. It takes the rules of golf and substitutes a frisbee instead of a ball and baskets instead of a hole. The sport has grown exponentially over the past decade
+               and more courses are being established around country. Disc golf is just as frustrating and rewarding as regular golf and is the most fun with a group of friends.
+            </p>
+            <h3>Video Games:</h3>
+            <p>Ever since I got a Nintendo 64 as a kid, I have loved playing all types of video games. I mostly play sports and role-playing games but I also enjoy strategy and first-person shooters. A few years ago, I even built my own computer
+               in order to play games at very high quality. If I'm not at work or out with friends, I'm most likely sitting on my couch or at my computer playing video games.
+            </p>
+         </section>
+      </article>
+   </main>
+   <footer>
+      <p>&copy;&nbsp;2022 Andrew Donelson</p>
+   </footer>
+</body>
 </html>
