--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             <p>Disc golf is a newer sport that I became interested in during college. It takes the rules of golf and substitutes a frisbee instead of a ball and baskets instead of a hole. The sport has grown exponentially over the past decade
                and more courses are being established around country. Disc golf is just as frustrating and rewarding as regular golf and is the most fun with a group of friends.
             </p>
+            <img src="images/disc_golf.jpg" height = "500">
             <h3>Video Games:</h3>
             <p>Ever since I got a Nintendo 64 as a kid, I have loved playing all types of video games. I mostly play sports and role-playing games but I also enjoy strategy and first-person shooters. A few years ago, I even built my own computer
                in order to play games at very high quality. If I'm not at work or out with friends, I'm most likely sitting on my couch or at my computer playing video games.
