--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <u><h2>Hobbies and Interests</h2></u>
             <h3>Sports:</h3>
             <h4><b>&lt;&nbsp;Hockey&nbsp;&gt;</b></h4>
-            <p id="TestP" class="funParagraph">My parents taught me how to ice skate and I started playing ice hockey at 5 years old. I'm greatful to my parents for getting me started playing and even more greatful for the time they took out of their day
+            <p class="funParagraph">My parents taught me how to ice skate and I started playing ice hockey at 5 years old. I'm greatful to my parents for getting me started playing and even more greatful for the time they took out of their day
                to take me to practices and games. During high school, I played on my high school team and a college prepatory club team. I play defense because it's physically demanding and it's fun to check people.
                Hockey is my favorite sport and I still play currently.
             </p>
