--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
             </p>
             <img src="images/hockey.jpg">
             <h4><b>&lt;&nbsp;Soccer&nbsp;&gt;</b></h4>
-            <p>Another sport I became fascinated with at a young age was soccer. I started playing soccer around the same time as I started playing hockey. I also played on some club teams through high school as well as my
+            <p class="funParagraph">Another sport I became fascinated with at a young age was soccer. I started playing soccer around the same time as I started playing hockey. I also played on some club teams through high school as well as my
                high school team. I play goalie primarily because I enjoy the challenge of being the last line of defense for the team. I don't play as much as I use to but I still enjoy watching and playing soccer.
             </p>
             <img src="images/soccer.jpg">
             <h4><b>&lt;&nbsp;Disc Golf&nbsp;&gt;</b></h4>
-            <p>Disc golf is a newer sport that I became interested in during college. It takes the rules of golf and substitutes a frisbee instead of a ball and baskets instead of a hole. The sport has grown exponentially over the past decade
+            <p class="funParagraph">Disc golf is a newer sport that I became interested in during college. It takes the rules of golf and substitutes a frisbee instead of a ball and baskets instead of a hole. The sport has grown exponentially over the past decade
                and more courses are being established around country. Disc golf is just as frustrating and rewarding as regular golf and is the most fun with a group of friends.
             </p>
             <img src="images/disc_golf.jpg" height = "500">
